--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,12 @@
 server:
   error:
     include-stacktrace: on_param
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/anime?useSSL=false
+    username: postgres
+    password: password
+  jpa:
+    hibernate:
+      ddl-auto: update
