--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,10 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/anime?useSSL=false
+    url: jdbc:postgresql://localhost:5432/anime
     username: postgres
     password: password
   jpa:
     hibernate:
       ddl-auto: update
+    show-sql: true
